2011-10-21  Peter Bloomfield

	* src/main-window.c: when network is connected, check mail in
	the subthread, so that the signal handler can return.

2011-10-14  Peter Bloomfield

	gtk_assistant_set_page_header_image and
	gtk_assistant_set_page_side_image are deprecated.

	* images/Makefile.am: no need for balsa-logo.png and
	balsa-watermark.png.
	* libinit_balsa/assistant_init.c (balsa_initdruid):
	* libinit_balsa/assistant_page_defclient.c
	(balsa_druid_page_defclient):
	* libinit_balsa/assistant_page_defclient.h:
	* libinit_balsa/assistant_page_directory.c
	(balsa_druid_page_directory):
	* libinit_balsa/assistant_page_directory.h:
	* libinit_balsa/assistant_page_finish.c (balsa_druid_page_finish):
	* libinit_balsa/assistant_page_finish.h:
	* libinit_balsa/assistant_page_user.c (balsa_druid_page_user):
	* libinit_balsa/assistant_page_user.h:
	* libinit_balsa/assistant_page_welcome.c
	(balsa_druid_page_welcome):
	* libinit_balsa/assistant_page_welcome.h: deprecation cleanup.

2011-10-14  Peter Bloomfield

	Gtk{HV}Paned is deprecated.

	* src/main-window.c: deprecation cleanup.

2011-10-14  Peter Bloomfield

	Gtk{HV}Separator is deprecated.

	* src/filter-edit-dialog.c (filters_edit_dialog): deprecation
	cleanup.

2011-10-14  Peter Bloomfield

	Gtk{HV}ButtonBox is deprecated.

	* src/ab-main.c (bab_get_edit_button_box):
	* src/ab-window.c (balsa_ab_window_init):
	* src/balsa-mime-widget-vcalendar.c (balsa_vevent_widget):
	* src/filter-edit-dialog.c (build_left_side), (build_right_side):
	* src/filter-run-dialog.c (balsa_filter_run_dialog_init):
	* src/main-window.c:
	* src/toolbar-prefs.c (create_toolbar_page): deprecation
	cleanup.


2011-10-13  Peter Bloomfield

	Gtk{HV}Box is deprecated.

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/html.c (libbalsa_html_new):
	* libbalsa/identity.c (append_ident_notebook_page),
	(ident_dialog_add_boxes), (libbalsa_identity_config_dialog):